buildscript {
	repositories {
		jcenter()
		maven { url = 'https://repo.spongepowered.org/maven' }
	}

	dependencies {
		classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
	}
}

apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'java'
apply plugin: 'idea'


group = 'com.enderzombi102'
version = '1.0-SNAPSHOT'

configurations {
    shade
}

subprojects {

	apply plugin: 'java'
	apply plugin: 'maven'

	version = rootProject.mod_version
	archivesBaseName = rootProject.archives_base_name

	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8

	configurations {
		jarz {}
	}

	// ensure that the encoding is set to UTF-8, no matter what the system default is
	// this fixes some edge cases with special characters not displaying correctly
	tasks.withType(JavaCompile) {
		options.encoding = "UTF-8"
	}

}

final ArrayList<String> subProjects = new ArrayList<>();

for ( Project proj : rootProject.subprojects ) {
	subProjects.add( proj.getName() )
}



dependencies {

//	for ( Project proj : rootProject.subprojects ) {
	for ( String proj : subProjects ) {
		// no need for compileOnly, there's no code in the root project
//		compileOnly( proj ) {
//			transitive = false
//		}
		shade( project( path: proj, configuration: 'jarz' ) ) {
			transitive = false
		}
	}
}

shadowJar {
    configurations = [project.configurations.shade]
    from sourceSets.main.allSource
    classifier ''
}

jar {
	from "LICENSE"
    manifest {
        attributes([
                "Specification-Title"     : "LoaderComplex",
                "Specification-Vendor"    : "ENDERZOMBI102",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : name,
                "Implementation-Version"  : version,
                "Implementation-Vendor"   : "ENDERZOMBI102",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
//				"FMLCorePlugin": "com.enderzombi102.loadercomplex.forge12.LoaderComplexCoremod"
        ])
    }
}

artifacts {
    archives shadowJar
}
